--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -70,6 +70,7 @@ legend {
     background-size: cover;
     background-repeat: no-repeat;
     margin-top: -20px;
+    margin-bottom: 10px;
     padding: 300px;
     text-align : center;
     text-shadow: 1px 1px 1px #000;
