--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,6 +86,9 @@ legend {
     .home-hero {
         padding:32px;
     }
+    .the_letter {
+        display: none;
+    }
 }
 
 
@@ -100,5 +103,17 @@ legend {
     width: 100%;
     padding: 10px 0;
     
+}
+
+.the_letter {
+    float: left;
+    font-size: 1.3em;
+    position: relative;
+    top: -2px;
+    left: 5px;
+}
+
+.edit_details {
+    float: right;
 }
 
